--- a/Data.html
+++ b/Data.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
 <title>Selfish Routing | Data </title>
  
-<meta http-equiv="refresh" content="durée;URL=https://solennollivier.github.io/SelfishRouting/Maintenance.html">
+<meta http-equiv="refresh" content="1;URL=https://solennollivier.github.io/SelfishRouting/Maintenance.html">
 </head>
+   
  
 <body>
 </body>
