--- a/Map.html
+++ b/Map.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 <title>Selfish Routing | Map</title>
  
-<meta http-equiv="refresh" content="durée;URL=https://solennollivier.github.io/SelfishRouting/Maintenance.html">
+<meta http-equiv="refresh" content="2;URL=https://solennollivier.github.io/SelfishRouting/Maintenance.html">
 </head>
  
 <body>
