--- a/Data.html
+++ b/Data.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
 <title>Selfish Routing | Data </title>
  
-<meta http-equiv="refresh" content="1;URL=https://solennollivier.github.io/SelfishRouting/Maintenance.html">
+<meta http-equiv="refresh" content="0;URL=https://solennollivier.github.io/SelfishRouting/Maintenance.html">
 </head>
    
  
 <body>
+    Redirection
 </body>
  
 </html>
