--- a/Maintenance.html
+++ b/Maintenance.html
@@ -37,7 +37,7 @@
                         <div class="col color-white">
                             <div class="fs-8 icon-Gears"></div>
                             <h4 class="mt-4 fw-400">This page is still being built.</h4>
-                            <a class=" btn-icon btn-icon-left btn btn-outline-info btn-sm-lg mt-5 text-uppercase ls" href="index.html"> <span class="icon-File-Chart"></span> Take me home </a>
+                            <a class=" btn-icon btn-icon-left btn btn-outline-info btn-sm-lg mt-5 text-uppercase ls" href="index.html"> <span class="icon-Car-3"></span> Take me home </a>
                         </div>
                     </div>
                     <!--/.row-->
