--- a/Maintenance.html
+++ b/Maintenance.html
@@ -28,6 +28,7 @@
         <link href="assets/css/custom.css" rel="stylesheet"> </head>
     <body data-spy="scroll" data-target=".inner-link" data-offset="60">
         <main>
+             <script src="assets/js/header.js"></script>
             <section class="py-0 font-1">
                 <div class="background-holder overlay overlay-0" style="background-image:url(assets/images/background/Busy-SF.png);"> </div>
                 <!--/.background-holder-->
@@ -44,6 +45,8 @@
                 </div>
                 <!--/.container-->
             </section>
+            <script src="assets/js/footer.js"></script>
+            
         </main>
         <!--  -->
         <!--    JavaScripts-->
