--- a/Form.html
+++ b/Form.html
@@ -76,6 +76,7 @@
                                         <div class='list 1'><span class="color-info icon-Camera-2"></span></div>
                                     </label>
                                     <input id='1' class='files' type='file' name='photo_1'/>
+                                    </div>
                                 </div>
                                  <label>Select tags that describe your problem</label>
                                 <div id="tags">
