--- a/Videos/CaseofStudyDetail.html
+++ b/Videos/CaseofStudyDetail.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="row mt-5">
                         <div class="col">
-                            <iframe width="100%" height="415" src="ComparisonEx.mp4" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe width="100%" height="415" src="Collaboration.mp4" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                     </div>
                     <div class="row mt-8">
