--- a/Summary_Page.html
+++ b/Summary_Page.html
@@ -37,10 +37,10 @@
             <script src="assets/js/header.js"></script>
             
             <section class="has-parallax color-white font-1 py-0">
-                <div class="background-holder overlay overlay-gradient parallax h-100vh" style="background-image:url(VideoShot.png);" data-rellax-speed="-10"> 
+                <div class="background-holder overlay overlay-gradient parallax h-100vh" style="background-image:url(assets/images/background/VideoShot.png);" data-rellax-speed="-10"> 
                 <video autoplay="autoplay" loop="loop" muted="muted">
                         <!--/.Changer la video busy freeway-->
-                        <source src="VideoTrafic.mp4" type="video/mp4"/>
+                        <source src="assets/images/background/VideoTrafic.mp4" type="video/mp4"/>
                         <!-- <source src="assets/videos/Road-candies/Road-candies.mp4" type="video/mp4"/>
                         <source src="assets/videos/Road-candies/Road-candies.ogv" type="video/ogv"/> -->
                     </video>
@@ -89,7 +89,7 @@
                                     <i class="dropdown icon"></i>The App-induced deterioration of urban road mobility </div>
                                 <div class="content">
                                     <p class="transition hidden">
-                                        <a href="Chapt1.html"> The creation of thru-traffic chaos by apps  </a>
+                                        <a href="Chapters/Chapt1.html"> The creation of thru-traffic chaos by apps  </a>
                                         <br>
                                         <a href="#Chapt2.html"> The inability of classic traffic control to contain thru-traffic </a>
                                         </p>
