--- a/Case_Studies.html
+++ b/Case_Studies.html
@@ -54,7 +54,7 @@
                                     <div class="hoverbox">
                                         <img class="radius-primary" src="assets/images/background/Uber-Driver.png">
                                         <div class="hoverbox-content full-height color-white justify-content-center row align-items-center background-1">
-                                            <a class="col color-white" href="Article_CaseStudies.html">
+                                            <a class="col color-white" href="/CaseStudies/Article_CaseStudies.html">
                                                 <p class="mb-2 d-inline-block">Case of study</p>
                                                 <br>
                                                 <h5 class="d-inline-block mt-0">Something</h5>
