--- a/CaseStudies/Article_CaseStudies.html
+++ b/CaseStudies/Article_CaseStudies.html
@@ -7,7 +7,7 @@
         <!--  -->
         <!--    Document Title-->
         <!-- =============================================-->
-        <title>Posh | Create Beautiful Websites. Effortlessly.</title>
+        <title>Selfish Routing | CaseStudies </title>
         <!--  -->
         <!--    Favicons-->
         <!--    =============================================-->
