--- a/WazePublications.html
+++ b/WazePublications.html
@@ -7,7 +7,7 @@
         <!--  -->
         <!--    Document Title-->
         <!-- =============================================-->
-        <title>Publications | Selfish Routing </title>
+        <title>Selfish Routing | Publications </title>
         <!--  -->
         <!--    Favicons-->
         <!--    =============================================-->
