--- a/Case_Studies.html
+++ b/Case_Studies.html
@@ -50,7 +50,7 @@
                     <span class="icon-File-Search color-info fs-4 mb-5"></span><br>
                         <div class="row sortable-container">
                             <div class="sortable-item col-lg-6 animation">
-                                <a href="Article_CaseStudies.html">
+                                <a href="CaseStudies/Article_CaseStudies.html">
                                     <div class="hoverbox">
                                         <img class="radius-primary" src="assets/images/background/Uber-Driver.png">
                                         <div class="hoverbox-content full-height color-white justify-content-center row align-items-center background-1">
