--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 <div class="col-5 col-xl-4">
                                     <p class="text-left mb-0 fw-300">Made in <br/><a href="http://www.berkeley.edu" target="_blank" class="color-white">UC Berkeley</a></p>
                                 </div>
-                            </div>
+                            </div> 
                             <a class=" btn-icon btn-icon-left btn btn-outline-info btn-sm-lg mt-5 text-uppercase ls" href="#start"> <span class="icon-Car-3"></span>Explore</a>
                         </div>
                         <!--/.col-*-->
@@ -104,7 +104,7 @@
                             <span class="icon-File-Search color-info fs-4" ></span>
                             <h5 class="fw-400 my-3 color-info">Case studies</h5>
                             <p class="mb-0 color-5 fw-300">We focused on issues in different location to have a deeper understanding of how selfish routing impacts traffic and how apps algorithms calculate the itineraries. </p>
-                            <a class="btn btn-link fw-400" href="#">Have a look &rarr;</a>
+                            <a class="btn btn-link fw-400" href="Case_Studies.html">Have a look &rarr;</a>
                             </div>
                         </div>
                         <div class="col-lg-4 px-6 pt-5 mb-5 mb-lg-0 " >
@@ -112,7 +112,7 @@
                             <span class="icon-Map2 color-info fs-4"></span>
                             <h5 class="fw-400 my-3 color-info">The map</h5>
                             <p class="mb-0 color-5 fw-300">The best way to understand the extent of those concerns is to discover "The Map". It has been designed to record where traffic got worse in the different locations.  </p>
-                            <a class="btn btn-link fw-400" href="#">Find out now &rarr;</a>
+                            <a class="btn btn-link fw-400" href="Map.html">Find out now &rarr;</a>
                             </div>
                         </div>
                     </div>
