--- a/Summary_Page.html
+++ b/Summary_Page.html
@@ -162,7 +162,7 @@
                                         <p class="color-5 fw-300">short summary ter</p>
                                     </div>
                                 </div>
-                                <div class="col-md-6 mb-4"><a href="CaseStudies.html">
+                                <div class="col-md-6 mb-4"><a href="Case_Studies.html">
                                     <div class="border color-9 p-4" id="frameS">
                                         <h5 class="fs-5 color-info fw-300">4.</h5>
                                         <h5 class="mb-2 color-info fw-400">Case studies</h5>
