--- a/Contact.html
+++ b/Contact.html
@@ -74,7 +74,7 @@
                                     <span class="fa fa-envelope"></span>
                                 </div>
                                 <div class="col">
-                                    <a class="fw-300" href="#mailto:Waze mail" target="_blank">Wazeemail@gmail.com</a>
+                                    <a class="fw-300" href="mailto:SelfishRouting@gmail.com" target="_blank">SelfishRouting@gmail.com</a>
                                 </div>
                             </div>
                             <br>
@@ -92,15 +92,15 @@
 	                                       <span class="fa fa-twitter"></span>Twitter&nbsp;&nbsp;
                                         </a>
                                         
-                                        <a href="https://facebook.com" class="btn btn-icon btn-outline-primary btn-icon-left">
+                                        <a href="https://www.facebook.com/ITSBerkeley/" class="btn btn-icon btn-outline-primary btn-icon-left">
 	                                       <span class="fa fa-facebook-f"></span>Facebook
                                         </a>
                                         <br>
                                         <br>
-                                        <a href="https://Linkedin.com" class="btn btn-icon btn-outline-primary btn-icon-left">
+                                        <a href="https://www.linkedin.com/in/alexandre-bayen-8479598/" class="btn btn-icon btn-outline-primary btn-icon-left">
 	                                       <span class="fa fa-linkedin"></span>LinkedIn 
                                         </a>
-                                        <a href="https://youtube.com" class="btn btn-icon btn-outline-danger btn-icon-left">
+                                        <a href="https://www.youtube.com/channel/UCayNg17c1YFseny5euwROvg" class="btn btn-icon btn-outline-danger btn-icon-left">
 	                                       <span class="fa fa-youtube"></span>YouTube&nbsp;&nbsp;
                                         </a>
                                     </p>
