--- a/Contact.html
+++ b/Contact.html
@@ -88,19 +88,19 @@
                                         <br>
                                         <br>
                                         <br>
-                                        <a href="https://twitter.com/alexandrebayen" class="btn btn-icon btn-outline-info btn-icon-left">
+                                        <a href="https://twitter.com/alexandrebayen" target="_blank" class="btn btn-icon btn-outline-info btn-icon-left">
 	                                       <span class="fa fa-twitter"></span>Twitter&nbsp;&nbsp;
                                         </a>
                                         
-                                        <a href="https://www.facebook.com/ITSBerkeley/" class="btn btn-icon btn-outline-primary btn-icon-left">
+                                        <a href="https://www.facebook.com/ITSBerkeley/" target="_blank" class="btn btn-icon btn-outline-primary btn-icon-left">
 	                                       <span class="fa fa-facebook-f"></span>Facebook
                                         </a>
                                         <br>
                                         <br>
-                                        <a href="https://www.linkedin.com/in/alexandre-bayen-8479598/" class="btn btn-icon btn-outline-primary btn-icon-left">
+                                        <a href="https://www.linkedin.com/in/alexandre-bayen-8479598/" target="_blank" class="btn btn-icon btn-outline-primary btn-icon-left">
 	                                       <span class="fa fa-linkedin"></span>LinkedIn 
                                         </a>
-                                        <a href="https://www.youtube.com/channel/UCayNg17c1YFseny5euwROvg" class="btn btn-icon btn-outline-danger btn-icon-left">
+                                        <a href="https://www.youtube.com/channel/UCayNg17c1YFseny5euwROvg" target="_blank" class="btn btn-icon btn-outline-danger btn-icon-left">
 	                                       <span class="fa fa-youtube"></span>YouTube&nbsp;&nbsp;
                                         </a>
                                     </p>
