--- a/Videos/CaseofStudyDetail.html
+++ b/Videos/CaseofStudyDetail.html
@@ -70,10 +70,10 @@
         <!--  -->
         <!--    JavaScripts-->
         <!--    =============================================-->
-        <script src="assets/lib/jquery/dist/jquery.js"></script>
+        <script src="../assets/lib/jquery/dist/jquery.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
-        <script src="assets/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="assets/js/core.js"></script>
-        <script src="assets/js/main.js"></script>
+        <script src="../assets/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="../assets/js/core.js"></script>
+        <script src="../assets/js/main.js"></script>
     </body>
 </html>
