--- a/Contact.html
+++ b/Contact.html
@@ -59,7 +59,7 @@
                                 </div>
                                 <div class="col">
                                     <p class="fw-300">
-                                        <span class="fw-600">Mobile Sensing Lab</span>
+                                        <span class="fw-600"><a href="https://bayen.berkeley.edu" target="_blank" class="color-white">Mobile Sensing Lab</a></span>
                                         <br>
                                         <span class="color-5">University of California Berkeley</span>
                                         <br>
@@ -97,12 +97,12 @@
                                         </a>
                                         <br>
                                         <br>
-                                        <a href="https://www.linkedin.com/in/alexandre-bayen-8479598/" target="_blank" class="btn btn-icon btn-outline-primary btn-icon-left">
+                                        <!--<a href="https://www.linkedin.com/in/alexandre-bayen-8479598/" target="_blank" class="btn btn-icon btn-outline-primary btn-icon-left">
 	                                       <span class="fa fa-linkedin"></span>LinkedIn 
                                         </a>
                                         <a href="https://www.youtube.com/channel/UCayNg17c1YFseny5euwROvg" target="_blank" class="btn btn-icon btn-outline-danger btn-icon-left">
 	                                       <span class="fa fa-youtube"></span>YouTube&nbsp;&nbsp;
-                                        </a>
+                                        </a>-->
                                     </p>
                                 </div>
                             </div>
