--- a/NewMap.html
+++ b/NewMap.html
@@ -163,7 +163,7 @@
       // locate you.
         var map, infoWindow;
         function initAutocomplete() {
-            var map = new google.maps.Map(document.getElementById('map'), {
+        var map = new google.maps.Map(document.getElementById('map'), {
                 center: {lat: 37.8688, lng: -122.2195},
                 zoom: 13,
                 mapTypeId: 'roadmap'
@@ -257,7 +257,7 @@
             });
       
       </script>
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8rJhDsfwvIod9jVTfFm1Dtv2eO4QWqxQ&callback=initMap"
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8rJhDsfwvIod9jVTfFm1Dtv2eO4QWqxQ&callback=initAutocomplete"
     async defer></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8rJhDsfwvIod9jVTfFm1Dtv2eO4QWqxQ&libraries=places&callback=initAutocomplete"
          async defer></script>
