--- a/Case_Studies.html
+++ b/Case_Studies.html
@@ -32,7 +32,7 @@
              <script src="assets/js/header.js"></script>       
             <!-- /.znav-container-->
             <section>
-                <div class="background-holder overlay overlay-2 mb-5" style="background-image:url(assets/images/background/Piedmond-street.png);"> </div>
+                <div class="background-holder overlay overlay-2 mb-5" style="background-image:url(assets/images/background/CityLab-ResidentExempt-NewJersey.jpg);"> </div>
                 <!--/.background-holder-->
                 <div class="container">
                     <div class="row align-items-center text-center">
