--- a/Case_Studies.html
+++ b/Case_Studies.html
@@ -37,7 +37,7 @@
                 <div class="container">
                     <div class="row align-items-center text-center">
                         <div class="col-md-12">
-                            <h1 class="fs-3 fs-md-4 color-white"> Case studies </h1>
+                            <h1 class="fs-3 fs-md-4 color-white"> Real life scenarios </h1>
                             <p class="color-white"> Read some of our case studies </p>
                             <hr class="short color-white"> </div>
                     </div>
@@ -66,6 +66,59 @@
                                     <div class="my-4"></div>
                                 </a>
                             </div>
+                            <div class="sortable-item col-lg-6 animation">
+                                <a href="CaseStudies/Article_CaseStudies.html">
+                                    <div class="hoverbox">
+                                        <img class="radius-primary" src="assets/images/background/Uber-Driver.png">
+                                        <div class="hoverbox-content full-height color-white justify-content-center row align-items-center background-1">
+                                            <a class="col color-white" href="CaseStudies/Article_CaseStudies.html">
+                                                <p class="mb-2 d-inline-block">Case of study</p>
+                                                <br>
+                                                <h5 class="d-inline-block mt-0">Something</h5>
+                                                <br>
+                                                <div class="btn btn-outline-white btn-xs mt-4">View Details</div>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="my-4"></div>
+                                </a>
+                            </div>
+                            <div class="sortable-item col-lg-6 animation">
+                                <a href="CaseStudies/Article_CaseStudies.html">
+                                    <div class="hoverbox">
+                                        <img class="radius-primary" src="assets/images/background/Uber-Driver.png">
+                                        <div class="hoverbox-content full-height color-white justify-content-center row align-items-center background-1">
+                                            <a class="col color-white" href="CaseStudies/Article_CaseStudies.html">
+                                                <p class="mb-2 d-inline-block">Case of study</p>
+                                                <br>
+                                                <h5 class="d-inline-block mt-0">Something</h5>
+                                                <br>
+                                                <div class="btn btn-outline-white btn-xs mt-4">View Details</div>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="my-4"></div>
+                                </a>
+                            </div>
+                            <div class="sortable-item col-lg-6 animation">
+                                <a href="CaseStudies/Article_CaseStudies.html">
+                                    <div class="hoverbox">
+                                        <img class="radius-primary" src="assets/images/background/Uber-Driver.png">
+                                        <div class="hoverbox-content full-height color-white justify-content-center row align-items-center background-1">
+                                            <a class="col color-white" href="CaseStudies/Article_CaseStudies.html">
+                                                <p class="mb-2 d-inline-block">Case of study</p>
+                                                <br>
+                                                <h5 class="d-inline-block mt-0">Something</h5>
+                                                <br>
+                                                <div class="btn btn-outline-white btn-xs mt-4">View Details</div>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="my-4"></div>
+                                </a>
+                            </div>
+                            </div>
+                    </div>
                             <!-- <div class="sortable-item col-lg-6 digital">
                                 <a href="portfolio-details.html">
                                     <div class="hoverbox">
@@ -151,8 +204,7 @@
                                     <div class="my-4"></div>
                                 </a>
                             </div> -->
-                        </div>
-                    </div>
+                        
                     <!--/.row-->
                 <!--/.container-->
             </section>
