--- a/Summary_Page.html
+++ b/Summary_Page.html
@@ -84,39 +84,7 @@
                                     <h3> Have a look at the chapters</h3>
                                 
                             </div>
-                            <div class="ui styled fluid accordion">
-                                <div class="title">
-                                    <i class="dropdown icon"></i>The App-induced deterioration of urban road mobility </div>
-                                <div class="content">
-                                    <p class="transition hidden">
-                                        <a href="Chapters/Chapt1.html"> The creation of thru-traffic chaos by apps  </a>
-                                        <br>
-                                        <a href="#Chapt2.html"> The inability of classic traffic control to contain thru-traffic </a>
-                                        </p>
-                                </div>
-                                <div class="title">
-                                    <i class="dropdown icon"></i> Extending traffic planning models to traffic controls</div>
-                                <div class="content active">
-                                    <p class="transition hidden">
-                                        <a href="#Chapt.html"> Traffic demand modeling for traffic control </a>
-                                        <br>
-                                        <a href="#chap.html"> Routing behavior modeling</a>
-                                        <br>
-                                        <a href="#chapt.html"> Dynamic traffic assignment</a>
-                                        <br>
-                                        <a href="#Chapt"> Simulator for traffic and land-use</a>
-                                        </p>
-                                </div>
-                                <div class="title">
-                                    <i class="dropdown icon"></i> The way forward and recommendations </div>
-                                <div class="content">
-                                    <p class="transition hidden">
-                                        <a href="#chapt.html"> Toward metropolitan scale management traffic</a>
-                                        <br>
-                                        <a href="#hpat.html"> Recommendations </a>
-                                        </p>
-                                </div>
-                            </div>
+                            <script src="assets/js/AccordionChapters.js"></script>
                         </div>
                     </div>
                     <!--/.row-->
