--- a/Humor.html
+++ b/Humor.html
@@ -70,7 +70,7 @@
 </a>
 	</div>
                      <div class="card mb-2 ml-2">
-<a href="assets/images/Humor/Uturn.jpg" data-lightbox="gallery-01" data-title="Turn left NOW !">
+<a href="assets/images/Humor/Uturn.jpg" data-lightbox="gallery-01" data-title=" Turn around ASAP ">
 	<img class="radius-secondary blur" src="assets/images/Humor/Uturn.jpg"/>
 </a>
 	</div>
