--- a/Form.html
+++ b/Form.html
@@ -49,7 +49,7 @@
                 <!--/.container-->
             </section>
             
-            <section>
+            <section class="pb-1">
                     <div class="row justify-content-center">
                         <div class="col-xl-8 text-center">
                             <br>
@@ -96,7 +96,7 @@
                                 <div class="form-group">
                                     <label> Ready to share your experience? </label>
                                     <br>
-                                    <input class='submit' type='submit' value='Place a marker'/>
+                                    <input class='submit' type='submit' value='Send'/>
                                 </div>
                                 <div class='resultat' style='color:red;font-family:roboto, sans-serif;'><br></div>
                                 <input type='hidden' value='false' name='verif_marker'/>
@@ -107,7 +107,7 @@
                         
                         <div class="col-lg-6">
                             <h4 class="fs-4 text-center"> <span class="icon-Map2 color-info"> </span></h4>
-
+<label>Where is the problem located? Please input an adress and check on the map</label>
                             <br>
                             <br>
                             <style>
@@ -203,7 +203,7 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-8 col-xl-6 py-8">
                             <h3 class="mb-3">Have a look at the map you've helped us build!</h3>
-                            <a class=" btn-icon btn-icon-left btn btn-outline-info btn-sm-lg mt-5 text-uppercase ls" href="Contact.html"> <span class="icon-Map2"></span>Discover ! </a>
+                            <a class=" btn-icon btn-icon-left btn btn-outline-info btn-sm-lg mt-5 text-uppercase ls" href="Map.html"> <span class="icon-Map2"></span>Discover ! </a>
                         </div>
                     </div>
                     <!--/.row-->
