--- a/Book_Team.html
+++ b/Book_Team.html
@@ -106,11 +106,25 @@
                             <div class="fs--1 text-uppercase color-6">PhD student, UC Berkeley</div>
                         </div>
                         <div class="col-sm-6 col-md-4 col-lg-3 p-4">
+                            <img class="radius-round px-5" src="assets/images/team/Alexander_Keimer.jpeg">
+                            <h5 class="fs-0 mt-3 mb-1">
+                                <a class="color-1" target="_blank" href="https://www.researchgate.net/profile/Alexander_Keimer">Alexander Keimer</a>
+                            </h5>
+                            <div class="fs--1 text-uppercase color-6">Dr., UC Berkeley</div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-3 p-4">
                             <img class="radius-round px-5" src="assets/images/team/Jessica.jpeg">
                             <h5 class="fs-0 mt-3 mb-1">
                                 <a class="color-1" target="_blank" href="https://tsrc.berkeley.edu/jessica-lazarus">Jessica Lazarus</a>
                             </h5>
                             <div class="fs--1 text-uppercase color-6">PhD student, UC Berkeley</div>
+                        </div>
+                        <div class="col-sm-6 col-md-4 col-lg-3 p-4">
+                            <img class="radius-round px-5" src="assets/images/team/yashar.jpg">
+                            <h5 class="fs-0 mt-3 mb-1">
+                                <a class="color-1" target="_blank" href="https://path.berkeley.edu/yashar-zeiynali-farid">Yashar Zeiynali Farid</a>
+                            </h5>
+                            <div class="fs--1 text-uppercase color-6">Postdoctoral Scholar, UC Berkeley</div>
                         </div>
                     </div>
                     <!--/.row-->
