--- a/Form.html
+++ b/Form.html
@@ -89,6 +89,9 @@
                                         <label for='increased_pollution'><input type='checkbox' class='tag' id='increased_pollution' value='Increased pollution' name='tag_6'/><div>Increased pollution</div></label>
                                         <label for='traffic_excess'><input type='checkbox' class='tag' id='traffic_excess' value='Traffic excess' name='tag_7'/><div>Traffic excess</div></label> 
                                 </div> 
+                               <div class="form-group">
+                                    <label for="exampleInputName">If you can't find the proper tag or want to add something,  please feel free to describe the problem in words </label>
+                                   <textarea class="form-control" name="content" id="text" type="text" placeholder="Message"></textarea> </div>
                                 <div class="form-group">
                                     <label for="exampleInputName">Is there an article dealing with this issue?</label>
                                     <input class="form-control" name="article_link" id="URL" type="text" placeholder="URL"> </div>
