--- a/WazePublications.html
+++ b/WazePublications.html
@@ -36,7 +36,7 @@
                         <div class="col-xl-8 text-center">
                             <h1 class="fs-3 mb-3 fw-400"><span class="icon-File-Chart color-info"></span></h1>
                             <h1 class="fs-3 mb-3 fw-400">Publications</h1>
-                            <p class="color-7 lead font-1 mb-6">Where you can further knowledge of the project</p>
+                            <p class="color-7 lead font-1 mb-6">Where you can further your knowledge of the project</p>
                         </div>
                     </div>
                     
