--- a/Humor.html
+++ b/Humor.html
@@ -58,8 +58,8 @@
             <section class="mr-6 ml-auto w-75">
                 
                 
-                <div class=" sortable text-center ">
-                <div class="ui selection dropdown mb-6">
+                <div class=" sortable ">
+                <div class="ui selection dropdown mb-6 col-lg-9">
                             <input type="hidden" name="catagories ">
                             <i class="dropdown icon"></i>
                             <div class="text">Viewing all</div>
@@ -67,6 +67,7 @@
                                 <div class="item" data-filter="*">Viewing all</div>
                                 <div class="item" data-filter=".RealLife">Believe it or not</div>
                                 <div class="item" data-filter=".ForFun"> Just for fun</div>
+                                <div class="item" data-filter=".GPSerr"> GPS error</div>
                             </div>
                 </div>
                     <div class="row sortable-container align-content-center"> 
@@ -163,7 +164,22 @@
                    <a href="assets/images/Humor/WazeAndData.png" data-lightbox="gallery-01" data-title=" Help us gather data to improve your experience ">
 	<img class="radius-secondary " src="assets/images/Humor/WazeAndData.png"/>
 </a> 
-	           </div>  
+	           </div>
+                <div class="card col-3 sortable-item RealLife ">
+                    <a href="assets/images/Humor/Uturn_Lamag.png" data-lightbox="gallery-01" data-title=" There is space don't worry. ">
+	               <img class="radius-secondary " src="assets/images/Humor/Uturn_Lamag.png"/>
+                    </a>
+	           </div> 
+                <div class="card col-3 sortable-item RealLife ">
+                    <a href="assets/images/Humor/Lamag_Humor.png" data-lightbox="gallery-01" data-title=" Find it convenient? ">
+	               <img class="radius-secondary " src="assets/images/Humor/Lamag_Humor.png"/>
+                    </a>
+	           </div>
+                <div class="card col-3 sortable-item GPSerr ">
+                    <a href="assets/images/Humor/GPStoldme.png" data-lightbox="gallery-01" data-title=" &laquo;I was only following instructions &raquo; ">
+	               <img class="radius-secondary " src="assets/images/Humor/GPStoldme.png"/> 
+                    </a>
+	           </div>            
                       <div class="card  col-3 sortable-item ForFun ">  
                         <a href="assets/images/Humor/WazeLate.jpg" data-lightbox="gallery-01" data-title=" Sorry, I might be late...  ">
 	<img class="radius-secondary " src="assets/images/Humor/WazeLate.jpg"/>
