--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
         <script src="assets/lib/typed.js/dist/typed.min.js"></script>
         <script src="assets/lib/owl.carousel/dist/owl.carousel.min.js"></script>
         <script src="assets/lib/flexslider/jquery.flexslider.js"></script>
+<style> .quotes {display: none;}</style>
  <script>
 // code gets installed at the end of the body (after all other HTML)
 (function() {
