--- a/Summary_Page.html
+++ b/Summary_Page.html
@@ -11,7 +11,8 @@
         <!--  -->
         <!--    Favicons-->
         <!--    =============================================-->
-        
+        <link rel="shortcut icon" href="assets/images/favicons/favicon.ico" type="image/x-icon">
+<link rel="icon" href="assets/images/favicons/favicon.ico" type="image/x-icon">
         <!--  -->
         <!--    Stylesheets-->
         <!--    =============================================-->
