colors and linlks

--- a/Summary_Page.html
+++ b/Summary_Page.html
@@ -38,10 +38,10 @@
             <script src="assets/js/header.js"></script>
             
             <section class="has-parallax color-white font-1 py-0">
-                <div class="background-holder overlay overlay-gradient parallax h-100vh" style="background-image:url(assets/images/background/VideoShot2.png);" data-rellax-speed="-10"> 
+                <div class="background-holder overlay overlay-gradient parallax h-100vh" style="background-image:url(assets/images/background/TrafficShotSummaryPage.png);" data-rellax-speed="-10"> 
                 <video autoplay="autoplay" loop="loop" muted="muted">
                         <!--/.Changer la video busy freeway-->
-                        <source src="assets/images/background/TrafficVideo.mp4" type="video/mp4"/>
+                        <source src="assets/images/background/TrafficBlurred.mp4" type="video/mp4"/>
                         <!-- <source src="assets/videos/Road-candies/Road-candies.mp4" type="video/mp4"/>
                         <source src="assets/videos/Road-candies/Road-candies.ogv" type="video/ogv"/> -->
                     </video>
@@ -160,7 +160,7 @@
                         <div class="col-lg-8 col-xl-6 py-8">
                             <h3 class="mb-3"> We are still working on the problem </h3>
                             <p> Find out about our latest studies </p>
-                            <a class=" btn-icon btn-icon-left btn btn-outline-info btn-sm-lg mt-5 text-uppercase ls" href="/Blog.html"> <span class="icon-Letter-Open"></span>Discover ! (blog) </a>
+                            <a class=" btn-icon btn-icon-left btn btn-outline-info btn-sm-lg mt-5 text-uppercase ls" href="/Blog/indexB.html"> <span class="icon-Letter-Open"></span>Discover ! </a>
                         </div>
                     </div>
                     <!--/.row-->
