--- a/Contact.html
+++ b/Contact.html
@@ -7,9 +7,11 @@
         <!--  -->
         <!--    Document Title-->
         <!-- =============================================-->
-        <title>Selfish Routing </title>
+        <title>Selfish Routing | Contact us</title>
         <!--  -->
         <!--    Favicons-->
+        <link rel="shortcut icon" href="assets/images/favicons/favicon.ico" type="image/x-icon">
+<link rel="icon" href="assets/images/favicons/favicon.ico" type="image/x-icon">
         <!--    =============================================-->
         <script src="assets/js/favicon.js"></script>
         <meta name="theme-color" content="#ffffff">
@@ -59,7 +61,7 @@
                                 </div>
                                 <div class="col">
                                     <p class="fw-300">
-                                        <span class="fw-600"><a href="https://bayen.berkeley.edu" target="_blank" class="color-white">Mobile Sensing Lab</a></span>
+                                        <span class="fw-600"><a href="https://bayen.berkeley.edu" target="_blank" class="color-4">Mobile Sensing Lab</a></span>
                                         <br>
                                         <span class="color-5">University of California Berkeley</span>
                                         <br>
@@ -73,9 +75,9 @@
                                 <div class="col-1">
                                     <span class="fa fa-envelope"></span>
                                 </div>
-                                <div class="col">
+                                <!-- <div class="col">
                                     <a class="fw-300" href="mailto:SelfishRouting@gmail.com" target="_blank">SelfishRouting@gmail.com</a>
-                                </div>
+                                </div>-->
                             </div>
                             <br>
                             <div class="row">
@@ -88,11 +90,11 @@
                                         <br>
                                         <br>
                                         <br>
-                                        <a href="https://twitter.com/alexandrebayen" target="_blank" class="btn btn-icon btn-outline-info btn-icon-left">
+                                        <a href="https://twitter.com/SelfishRouting" target="_blank" class="btn btn-icon btn-outline-info btn-icon-left">
 	                                       <span class="fa fa-twitter"></span>Twitter&nbsp;&nbsp;
                                         </a>
                                         
-                                        <a href="https://www.facebook.com/ITSBerkeley/" target="_blank" class="btn btn-icon btn-outline-primary btn-icon-left">
+                                        <a href="https://www.facebook.com/SelfishRouting/" target="_blank" class="btn btn-icon btn-outline-primary btn-icon-left">
 	                                       <span class="fa fa-facebook-f"></span>Facebook
                                         </a>
                                         <br>
@@ -112,7 +114,7 @@
 
                             <br>
                             <br>
-                            <iframe src="https://maps.google.com/maps?q=The%20citris%20invention%20lab&t=&z=11&ie=UTF8&iwloc=&output=embed" width="100%" height="400" frameborder="1" class="radius-secondary" style="border:0" allowfullscreen></iframe> 
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3149.4225118600666!2d-122.26124098489831!3d37.873800679741585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80857c23f8e0c7bf%3A0x54308409877a3f82!2sInstitute+of+Transportation+Studies!5e0!3m2!1sfr!2sus!4v1566427293623!5m2!1sfr!2sus" width="100%" height="400" frameborder="1" class="radius-secondary" style="border:0" allowfullscreen></iframe> 
                          </div>
                     </div>
                     <!--/.row-->
