--- a/Humor.html
+++ b/Humor.html
@@ -10,6 +10,8 @@
         <title>Selfish Routing | Humor</title>
         <!--  -->
         <!--    Favicons-->
+        <link rel="shortcut icon" href="assets/images/favicons/favicon.ico" type="image/x-icon">
+<link rel="icon" href="assets/images/favicons/favicon.ico" type="image/x-icon">
         <!--    =============================================-->
                 <link href="assets/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <!-- Template specific stylesheets-->
