--- a/Videos/indexV.html
+++ b/Videos/indexV.html
@@ -10,6 +10,8 @@
         <title>Selfish Routing | Videos </title>
         <!--  -->
         <!--    Favicons-->
+        <link rel="shortcut icon" href="assets/images/favicons/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="assets/images/favicons/favicon.ico" type="image/x-icon">
         <!--    =============================================-->
         <!--  -->
         <!--    Stylesheets-->
