--- a/Summary_Page.html
+++ b/Summary_Page.html
@@ -160,7 +160,7 @@
                         <div class="col-lg-8 col-xl-6 py-8">
                             <h3 class="mb-3"> We are still working on the problem </h3>
                             <p> Find out about our latest studies </p>
-                            <a class=" btn-icon btn-icon-left btn btn-outline-info btn-sm-lg mt-5 text-uppercase ls" href="/Blog/indexB.html"> <span class="icon-Letter-Open"></span>Discover ! </a>
+                            <a class=" btn-icon btn-icon-left btn btn-outline-info btn-sm-lg mt-5 text-uppercase ls" href="/SelfishRouting/Blog/indexB.html"> <span class="icon-Letter-Open"></span>Discover ! </a>
                         </div>
                     </div>
                     <!--/.row-->
