--- a/Case_Studies.html
+++ b/Case_Studies.html
@@ -7,7 +7,7 @@
         <!--  -->
         <!--    Document Title-->
         <!-- =============================================-->
-        <title>Selfish Routing | Videos </title>
+        <title>Selfish Routing | Stories </title>
         <!--  -->
         <!--    Favicons-->
         <link rel="shortcut icon" href="assets/images/favicons/favicon.ico" type="image/x-icon">
