--- a/WazePublications.html
+++ b/WazePublications.html
@@ -262,8 +262,8 @@
                 <div class="container-fluid">
                     <div class="row justify-content-center">
                         <div class="col-lg-8 col-xl-6 py-8">
-                            <h3 class="mb-3">Any questions?</h3>
-                            <p class="lead"> Feel free to contact us</p>
+                            <h3 class="mb-3">To find out more about our publications</h3>
+                            
                             <a class=" btn-icon btn-icon-left btn btn-outline-info btn-sm-lg mt-5 text-uppercase ls" href="Contact.html"> <span class="icon-Old-Telephone"></span>Contact us</a>
                             
                         </div>
