--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
                             <br/>
                             <br/>
                             <h1 class="fs-sm-4">A way to discover </h1>
-                            <h2 class="color-info quotes">the app-induced deterioration of urban road mobility</h2>
-                            <h2 class="color-info quotes">the way forward and recommendations</h2>
+                            <span class="fs-4 font-1 typed-text fw-600 color-info" data-typed-text='["the app-induced deterioration of urban road mobility ", "the way forward and recommendations"]'></span>
                             <!--<span class="fs-4 font-1 typed-text fw-600 color-info" data-typed-text='["the app-induced deterioration of urban road mobility ", "the way forward and recommendations"]'></span>-->
                            
                           
