--- a/index.html
+++ b/index.html
@@ -108,9 +108,7 @@
                                     #framex:hover {
                                         display:block;
                                         position:absolute;
-                                        width:89%;
-                                        height: 89%;
-                                        opacity:50%;
+                                        transform:scale(1.02,1.02);
                                         }
                                     </style>
                             <div class="border color-info radius-primary pr-4 pl-4 pt-4 pb-5" id="framex">
@@ -119,7 +117,7 @@
                             <span class="icon-Open-Book color-info fs-4" ></span>
                             <h5 class="fw-400 my-3 color-info">The Book</h5>
                             <p class="mb-0 color-5 fw-300">Our book is here to help you understand the issue and give you some of the solutions. On this website, you can have a look at the Summary Page and discover some of the chapters.</p>
-                            <a class="btn btn-link fw-400" href="Summary_Page.html">Get started &rarr;</a>
+                            <a class="btn btn-link fw-400 color-info" href="Summary_Page.html">Get started &rarr;</a>
                             </a></div>
                         </div>
                         <div class="col-lg-4 px-6 pt-5 mb-5 mb-lg-0" > 
@@ -129,7 +127,7 @@
                             <span class="icon-File-Search color-info fs-4" ></span>
                             <h5 class="fw-400 my-3 color-info">Stories</h5>
                             <p class="mb-0 color-5 fw-300">We focused on issues in different location to have a deeper understanding of how selfish routing impacts traffic and how apps algorithms calculate the itineraries. </p>
-                            <a class="btn btn-link fw-400" href="Case_Studies.html">Have a look &rarr;</a>
+                            <a class="btn btn-link fw-400 color-info" href="Case_Studies.html">Have a look &rarr;</a>
                             </a></div>
                         </div>
                         <div class="col-lg-4 px-6 pt-5 mb-5 mb-lg-0 " >
@@ -137,7 +135,7 @@
                             <span class="icon-Map2 color-info fs-4"></span>
                             <h5 class="fw-400 my-3 color-info">The map</h5>
                             <p class="mb-0 color-5 fw-300">The best way to understand the extent of those concerns is to discover "The Map". It has been designed to record where traffic got worse in the different locations.  </p>
-                            <a class="btn btn-link fw-400" href="Map.html">Find out now &rarr;</a>
+                            <a class="btn btn-link fw-400 color-info" href="Map.html">Find out now &rarr;</a>
                             </a></div>
                         </div>
                         
